[metadata]
name = tractor
description = Tractor python library
long_description = file: README.md
keywords = cg, production, renderfarm, pixar
author = Pixar
url = https://renderman.pixar.com/tractor
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Multimedia :: Graphics

[options]
zip_safe = False

[options.extras_require]
dev =
    wheel
